--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
-    <string name="app_name">FoodiGo1</string>
-<<<<<<< HEAD
+    <string name="app_name">Food!Go</string>
+
     <string name="title_activity_maps1">Maps1Activity</string>
-    <string name="title_activity_maps2">Maps2Activity</string>
-=======
-    <string name="title_activity_elo_maps">EloMapsActivity</string>
->>>>>>> 86ff5ec9baad9897d02c4692cb709f40b92a4649
+
+    <string name="home_message">Arriverez vous à retrouver tous les aliments sur la care ?</string>
+    <string name="play_message">JOUER</string>
+    >>>>>>> 86ff5ec9baad9897d02c4692cb709f40b92a4649
 </resources>
