maps actvity 1 positionnement des éléments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
 
     <string name="home_message">Arriverez vous à retrouver tous les aliments sur la care ?</string>
     <string name="play_message">JOUER</string>
+    <string name="findFoodi">Repére une foodie sur la carte et pars à sa recherche </string>
     >>>>>>> 86ff5ec9baad9897d02c4692cb709f40b92a4649
 </resources>
