mise à jour du système de points

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,5 +43,6 @@
 
 
     <string name="nameOfPreferencesFile">capturedFoodie</string>
+    <string name="nameOfPointsSysteme">pointsSysteme</string>
 
 </resources>
