--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,5 +54,7 @@
     <string name="congratMessagePartTwo">Tu as attrapé tout les foodies, tu peux être fier de toi !</string>
     <string name="replayMessage">Le jeu a été réinitialisé, tu peux désormais rejouer !</string>
     <string name="YouAreHere">Vous êtes ici</string>
+    <string name="stop_camera">la caméra est arretée</string>
+    <string name="start_camera">la caméra est activée</string>
 
 </resources>
